deployment-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: debian
  name: debian-pv
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debian
  template:
    metadata:
      labels:
        app: debian
    spec:
      containers:
      - image: amd64/debian:9.11
        imagePullPolicy: IfNotPresent
        name: debian-pv
        volumeMounts:
          - name: volume-mnt
            mountPath: "/mnt"
      volumes:
      - name: volume-mnt
        persistentVolumeClaim:
          claimName: nfs-pvc
