nginx-deployment_foo_ex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tag: foo
  name: nginx-foo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      tag: foo
  template:
    metadata:
      creationTimestamp: null
      labels:
        tag: foo
    spec:
      containers:
      - image: registry.nipa.cloud/workshop_k8s/nginx_foo
        imagePullPolicy: IfNotPresent
        name: nginx-foo
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
