nginx-deployment_rolling_update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: nginx
    helm.sh/chart: nginx-5.1.1
  name: nginx-rolling
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx
      app.kubernetes.io/name: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: nginx
        helm.sh/chart: nginx-5.1.1
    spec:
      containers:
      - image: registry.nipa.cloud/workshop_k8s/nginx_a
        imagePullPolicy: IfNotPresent
        name: nginx-rolling
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
