service_foo_ex.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-foo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    tag: foo
