ingress_bar.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bar
spec:
  rules:
  - host: bar.csp.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-bar
          servicePort: 80
status:
  loadBalancer: {}
