ingress_foo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-foo
spec:
  rules:
  - host: foo.csp.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-foo
          servicePort: 80
