ingress_foo_tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-foo-tls
spec:
  tls:
  - hosts:
    - sslfoo.csp.local
    secretName: test-tls
  rules:
  - host: sslfoo.csp.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-foo
          servicePort: 80
status:
  loadBalancer: {}
